fix word wrap

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -30,6 +30,7 @@
 		font-weight: bold;
 		font-size: 20px;
 		width: 100%;
+    word-wrap: break-word;
 	}
 }
 
